k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: trungdevops/food-delivery-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: food-delivery
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
