k8s/07-ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-delivery-ingress-haproxy
  namespace: food-delivery
  annotations:
    haproxy.org/timeout-client: 60s
    haproxy.org/timeout-server: 60s
spec:
  ingressClassName: haproxy
  rules:
    - host: food.trungdevops.vn
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: admin.food.trungdevops.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
